[gd_scene load_steps=24 format=3 uid="uid://bt8v8a3u7l40u"]

[ext_resource type="Script" uid="uid://jsje2m0asuew" path="res://cenas/token_player_2.gd" id="1_lt4tn"]
[ext_resource type="Texture2D" uid="uid://c1dpify55utsm" path="res://imagens/erro.png" id="3_lt4tn"]
[ext_resource type="FontFile" uid="uid://ceala3nd5qfyv" path="res://fontes/ByteBounce.ttf" id="4_i2vfg"]
[ext_resource type="Script" uid="uid://bqg2q7td4flg2" path="res://scripts/player.gd" id="4_i3xu1"]
[ext_resource type="Script" uid="uid://rixa4nhqmw4m" path="res://cenas/bar_vida.gd" id="5_3nnub"]
[ext_resource type="FontFile" uid="uid://m8ib5aucaayr" path="res://fontes/PressStart2P-Regular.ttf" id="5_i3xu1"]
[ext_resource type="Texture2D" uid="uid://bcamhkbkdibto" path="res://imagens/file_00000000693861f9868eca809ffaddd1_1.png" id="6_i3xu1"]
[ext_resource type="Texture2D" uid="uid://cxtxes5wkqyae" path="res://imagens/file_00000000693861f9868eca809ffaddd1_1_sem_fundo.png" id="7_c2ffx"]
[ext_resource type="PackedScene" uid="uid://bdmnafrfo1mhj" path="res://cenas/inventario.tscn" id="8_1dex0"]
[ext_resource type="Script" uid="uid://dxi807ot7d4n3" path="res://scripts/layer_bars.gd" id="8_i2vfg"]
[ext_resource type="PackedScene" uid="uid://y2b0s1rfaa4b" path="res://cenas/chat_global.tscn" id="9_hs6yw"]
[ext_resource type="Texture2D" uid="uid://cs0elkormjx15" path="res://imagens/personagens/images (1).jpg" id="10_3nnub"]
[ext_resource type="Texture2D" uid="uid://jx40ndkub1uy" path="res://imagens/layer/token-border-collection-v0-61i9u2n221ja1.png" id="11_i3xu1"]
[ext_resource type="Texture2D" uid="uid://cc7shmj4l10p2" path="res://imagens/efeitos/ciculo_clique.png" id="14_c2ffx"]
[ext_resource type="Texture2D" uid="uid://cqy65cb5i3htq" path="res://imagens/efeitos/brilho_clique.png" id="15_1dex0"]

[sub_resource type="CircleShape2D" id="CircleShape2D_cgb5g"]
radius = 54.7083

[sub_resource type="FontVariation" id="FontVariation_q44j6"]
base_font = ExtResource("4_i2vfg")

[sub_resource type="CircleShape2D" id="CircleShape2D_c2ffx"]
radius = 36.3456

[sub_resource type="CircleShape2D" id="CircleShape2D_1dex0"]
radius = 520.096

[sub_resource type="FontVariation" id="FontVariation_hkn2p"]
base_font = ExtResource("4_i2vfg")

[sub_resource type="Animation" id="Animation_hs6yw"]
resource_name = "brilho"
length = 5.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("BrilhoClique:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0.1, 0.1), Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(7, 7)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_jvjme"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("BrilhoClique:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0.1, 0.1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(7, 7)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_jt8pl"]
_data = {
&"RESET": SubResource("Animation_jvjme"),
&"brilho": SubResource("Animation_hs6yw")
}

[node name="token_player" type="CharacterBody2D" groups=["player"]]
scale = Vector2(0.04, 0.04)
collision_layer = 2
collision_mask = 2
script = ExtResource("1_lt4tn")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(1, 2)
shape = SubResource("CircleShape2D_cgb5g")

[node name="show_notificacao" type="Sprite2D" parent="."]
visible = false
position = Vector2(-230, -476)
scale = Vector2(0.4, 0.4)
texture = ExtResource("3_lt4tn")
region_enabled = true
region_rect = Rect2(180.125, 187.609, 398.25, 28.936)

[node name="Erro7" type="Sprite2D" parent="show_notificacao"]
position = Vector2(395, 2.5)
texture = ExtResource("3_lt4tn")
region_enabled = true
region_rect = Rect2(180.125, 187.609, 398.25, 28.936)

[node name="Erro8" type="Sprite2D" parent="show_notificacao"]
position = Vector2(775, 2.5)
texture = ExtResource("3_lt4tn")
region_enabled = true
region_rect = Rect2(180.125, 187.609, 398.25, 28.936)

[node name="Erro7" type="Sprite2D" parent="show_notificacao/Erro8"]
position = Vector2(395, 2.5)
texture = ExtResource("3_lt4tn")
region_enabled = true
region_rect = Rect2(180.125, 187.609, 398.25, 28.936)

[node name="Erro8" type="Sprite2D" parent="show_notificacao/Erro8"]
position = Vector2(417.5, -1.19209e-06)
texture = ExtResource("3_lt4tn")
region_enabled = true
region_rect = Rect2(180.125, 187.609, 398.25, 28.936)

[node name="Erro" type="Sprite2D" parent="show_notificacao"]
position = Vector2(-257.5, -48.0522)
scale = Vector2(1, 1.0096)
texture = ExtResource("3_lt4tn")
region_enabled = true
region_rect = Rect2(49.625, 120.09, 132.75, 115.673)

[node name="Erro5" type="Sprite2D" parent="show_notificacao/Erro"]
position = Vector2(0, 99.5957)
texture = ExtResource("3_lt4tn")
flip_v = true
region_enabled = true
region_rect = Rect2(49.625, 120.09, 132.75, 115.673)

[node name="Erro3" type="Sprite2D" parent="show_notificacao/Erro"]
position = Vector2(1702.5, 99.5958)
texture = ExtResource("3_lt4tn")
flip_h = true
flip_v = true
region_enabled = true
region_rect = Rect2(49.625, 120.09, 132.75, 115.673)

[node name="Erro4" type="Sprite2D" parent="show_notificacao/Erro"]
position = Vector2(1702.5, 0.546997)
texture = ExtResource("3_lt4tn")
flip_h = true
region_enabled = true
region_rect = Rect2(49.625, 120.09, 132.75, 115.673)

[node name="Erro2" type="Sprite2D" parent="show_notificacao"]
position = Vector2(2.50003, -50.0001)
texture = ExtResource("3_lt4tn")
region_enabled = true
region_rect = Rect2(177.875, 135.545, 400.5, 81)

[node name="Erro3" type="Sprite2D" parent="show_notificacao/Erro2"]
position = Vector2(397.5, 0)
texture = ExtResource("3_lt4tn")
region_enabled = true
region_rect = Rect2(180.125, 135.545, 398.25, 81)

[node name="Erro4" type="Sprite2D" parent="show_notificacao/Erro2"]
position = Vector2(792.5, 0)
texture = ExtResource("3_lt4tn")
region_enabled = true
region_rect = Rect2(177.875, 135.545, 400.5, 81)

[node name="Erro3" type="Sprite2D" parent="show_notificacao/Erro2/Erro4"]
position = Vector2(397.5, 0)
texture = ExtResource("3_lt4tn")
region_enabled = true
region_rect = Rect2(180.125, 135.545, 398.25, 81)

[node name="Erro5" type="Sprite2D" parent="show_notificacao/Erro2"]
position = Vector2(1190, 105)
rotation = -3.14159
texture = ExtResource("3_lt4tn")
region_enabled = true
region_rect = Rect2(177.875, 135.545, 400.5, 81)

[node name="Erro3" type="Sprite2D" parent="show_notificacao/Erro2/Erro5"]
position = Vector2(397.5, 0)
texture = ExtResource("3_lt4tn")
region_enabled = true
region_rect = Rect2(180.125, 135.545, 398.25, 81)

[node name="Erro4" type="Sprite2D" parent="show_notificacao/Erro2/Erro5"]
position = Vector2(792.5, 0)
texture = ExtResource("3_lt4tn")
region_enabled = true
region_rect = Rect2(177.875, 135.545, 400.5, 81)

[node name="Erro3" type="Sprite2D" parent="show_notificacao/Erro2/Erro5/Erro4"]
position = Vector2(397.5, 0)
texture = ExtResource("3_lt4tn")
region_enabled = true
region_rect = Rect2(180.125, 135.545, 398.25, 81)

[node name="show_erro" type="Node2D" parent="show_notificacao"]
visibility_layer = 2
position = Vector2(517.5, -280)
scale = Vector2(2.5, 2.5)

[node name="label_mensagem" type="Label" parent="show_notificacao/show_erro"]
modulate = Color(0.999546, 0.982296, 0.966632, 1)
self_modulate = Color(0, 0, 0, 1)
custom_minimum_size = Vector2(30, 30)
offset_left = -328.0
offset_top = 81.0
offset_right = 391.0
offset_bottom = 143.0
pivot_offset = Vector2(95, 0)
theme_override_fonts/font = SubResource("FontVariation_q44j6")
theme_override_font_sizes/font_size = 35
text = "vazio"
horizontal_alignment = 1
vertical_alignment = 1
clip_text = true

[node name="TimerErro" type="Timer" parent="show_notificacao/show_erro"]
wait_time = 1.9

[node name="AnimationPlayer" type="AnimationPlayer" parent="show_notificacao"]

[node name="token_player2" type="Area2D" parent="."]
scale = Vector2(1.5, 1.5)
script = ExtResource("4_i3xu1")

[node name="ColorRect2" type="ColorRect" parent="token_player2"]
offset_left = 486.0
offset_top = -458.0
offset_right = 1345.0
offset_bottom = 510.0
rotation = 1.57801
color = Color(0.34902, 0.152941, 0, 1)

[node name="imagem_fundo" type="Sprite2D" parent="token_player2"]
position = Vector2(7.62939e-06, 7.62939e-06)
scale = Vector2(3.54626, 3.70306)
region_enabled = true
region_rect = Rect2(736.75, 280.25, 281.25, 261)

[node name="token" type="Sprite2D" parent="token_player2"]
position = Vector2(25, 25)
scale = Vector2(6, 6)
region_enabled = true
region_rect = Rect2(21.25, 22.072, 225, 227.25)

[node name="nome" type="Label" parent="token_player2/token"]
modulate = Color(0.760784, 0.556863, 0.219608, 1)
offset_left = -85.0
offset_top = 58.0
offset_right = 75.0
offset_bottom = 81.0
pivot_offset = Vector2(31, 13)
theme_override_fonts/font = ExtResource("5_i3xu1")
text = "nome"
horizontal_alignment = 1
vertical_alignment = 1

[node name="nivel" type="Label" parent="token_player2/token"]
modulate = Color(0.780392, 0.596078, 0.243137, 1)
offset_left = -54.0
offset_top = -83.0
offset_right = 54.0
offset_bottom = -60.0
pivot_offset = Vector2(18, 12)
theme_override_fonts/font = ExtResource("5_i3xu1")
text = "1"
horizontal_alignment = 1
vertical_alignment = 1

[node name="imagem_fundo23" type="TextureRect" parent="token_player2"]
visible = false
custom_minimum_size = Vector2(1, 1)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -550.0
offset_top = -405.0
offset_right = 565.0
offset_bottom = 910.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(600, 600)
texture = ExtResource("10_3nnub")
metadata/_edit_use_anchors_ = true

[node name="borda_token" type="TextureRect" parent="token_player2"]
visible = false
custom_minimum_size = Vector2(1, 1)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -508.0
offset_top = -480.0
offset_right = 516.0
offset_bottom = 544.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(500, 500)
texture = ExtResource("11_i3xu1")
metadata/_edit_use_anchors_ = true

[node name="Token-border-collection-v0-61i9u2n221Ja1" type="Sprite2D" parent="token_player2"]
visible = false
position = Vector2(1.36239e-07, 28.5714)
scale = Vector2(1.2, 1.2)
texture = ExtResource("11_i3xu1")

[node name="CollisionShape2D" type="CollisionShape2D" parent="token_player2"]
shape = SubResource("CircleShape2D_c2ffx")

[node name="CharacterBody2D" type="CharacterBody2D" parent="token_player2"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="token_player2/CharacterBody2D"]
position = Vector2(0, 30)
shape = SubResource("CircleShape2D_1dex0")

[node name="imagem_fundo2" type="Sprite2D" parent="token_player2"]
position = Vector2(-2, -4)
scale = Vector2(0.43, 0.43)
region_enabled = true
region_rect = Rect2(24.313, 12.5, 243, 280.125)

[node name="camera" type="Node2D" parent="."]

[node name="chat_global2" parent="camera" instance=ExtResource("9_hs6yw")]
position = Vector2(-10375, -725)
scale = Vector2(24, 24)

[node name="Camera2D" type="Camera2D" parent="camera"]
position = Vector2(-6.10352e-05, -0.00012207)
scale = Vector2(20, 20)

[node name="layer_bars" type="Sprite2D" parent="camera/Camera2D"]
position = Vector2(-704.398, -572.399)
scale = Vector2(1.2, 1.2)
script = ExtResource("8_i2vfg")

[node name="bar_vida" type="ColorRect" parent="camera/Camera2D/layer_bars"]
offset_left = 25.0
offset_top = 170.0
offset_right = 1158.0
offset_bottom = 181.0
script = ExtResource("5_3nnub")

[node name="bar_vida2" type="ColorRect" parent="camera/Camera2D/layer_bars/bar_vida"]
layout_mode = 0
offset_right = 1134.0
offset_bottom = 11.0
color = Color(0.470483, 1.04684e-06, 2.64719e-07, 1)

[node name="valor_bar" type="Sprite2D" parent="camera/Camera2D/layer_bars/bar_vida"]
position = Vector2(47, -10)
scale = Vector2(0.1, 0.082875)
region_enabled = true
region_rect = Rect2(0, 0, 1536, 529)

[node name="Label" type="Label" parent="camera/Camera2D/layer_bars/bar_vida/valor_bar"]
offset_left = -400.0
offset_top = 121.0
offset_right = 10870.0
offset_bottom = 265.0
theme_override_fonts/font = SubResource("FontVariation_hkn2p")
theme_override_font_sizes/font_size = 150
text = " 999 "
horizontal_alignment = 1

[node name="File00000000693861f9868Eca809Ffaddd11" type="Sprite2D" parent="camera/Camera2D/layer_bars/bar_vida"]
position = Vector2(49, -9)
scale = Vector2(0.1, 0.082875)
texture = ExtResource("6_i3xu1")
region_enabled = true
region_rect = Rect2(0, 0, 1410.26, 529)

[node name="File00000000693861f9868Eca809Ffaddd12" type="Sprite2D" parent="camera/Camera2D/layer_bars/bar_vida/File00000000693861f9868Eca809Ffaddd11"]
position = Vector2(1160, 0)
texture = ExtResource("7_c2ffx")
region_enabled = true
region_rect = Rect2(307.331, 0, 1099.74, 529)

[node name="File00000000693861f9868Eca809Ffaddd13" type="Sprite2D" parent="camera/Camera2D/layer_bars/bar_vida/File00000000693861f9868Eca809Ffaddd11/File00000000693861f9868Eca809Ffaddd12"]
position = Vector2(1090, 0)
texture = ExtResource("7_c2ffx")
region_enabled = true
region_rect = Rect2(307.331, 0, 1099.74, 529)

[node name="File00000000693861f9868Eca809Ffaddd14" type="Sprite2D" parent="camera/Camera2D/layer_bars/bar_vida/File00000000693861f9868Eca809Ffaddd11/File00000000693861f9868Eca809Ffaddd12"]
position = Vector2(2140, 0)
texture = ExtResource("7_c2ffx")
region_enabled = true
region_rect = Rect2(307.331, 0, 1099.74, 529)

[node name="File00000000693861f9868Eca809Ffaddd13" type="Sprite2D" parent="camera/Camera2D/layer_bars/bar_vida/File00000000693861f9868Eca809Ffaddd11/File00000000693861f9868Eca809Ffaddd12/File00000000693861f9868Eca809Ffaddd14"]
position = Vector2(1090, 0)
texture = ExtResource("7_c2ffx")
region_enabled = true
region_rect = Rect2(307.331, 0, 1099.74, 529)

[node name="File00000000693861f9868Eca809Ffaddd15" type="Sprite2D" parent="camera/Camera2D/layer_bars/bar_vida/File00000000693861f9868Eca809Ffaddd11/File00000000693861f9868Eca809Ffaddd12"]
position = Vector2(4310, 0)
texture = ExtResource("7_c2ffx")
region_enabled = true
region_rect = Rect2(307.331, 0, 1099.74, 529)

[node name="File00000000693861f9868Eca809Ffaddd13" type="Sprite2D" parent="camera/Camera2D/layer_bars/bar_vida/File00000000693861f9868Eca809Ffaddd11/File00000000693861f9868Eca809Ffaddd12/File00000000693861f9868Eca809Ffaddd15"]
position = Vector2(1090, 0)
texture = ExtResource("7_c2ffx")
region_enabled = true
region_rect = Rect2(307.331, 0, 1099.74, 529)

[node name="File00000000693861f9868Eca809Ffaddd14" type="Sprite2D" parent="camera/Camera2D/layer_bars/bar_vida/File00000000693861f9868Eca809Ffaddd11/File00000000693861f9868Eca809Ffaddd12/File00000000693861f9868Eca809Ffaddd15"]
position = Vector2(2140, 0)
texture = ExtResource("7_c2ffx")
region_enabled = true
region_rect = Rect2(307.331, 0, 1099.74, 529)

[node name="File00000000693861f9868Eca809Ffaddd13" type="Sprite2D" parent="camera/Camera2D/layer_bars/bar_vida/File00000000693861f9868Eca809Ffaddd11/File00000000693861f9868Eca809Ffaddd12/File00000000693861f9868Eca809Ffaddd15/File00000000693861f9868Eca809Ffaddd14"]
position = Vector2(1090, 0)
texture = ExtResource("7_c2ffx")
region_enabled = true
region_rect = Rect2(307.331, 0, 1099.74, 529)

[node name="File00000000693861f9868Eca809Ffaddd14" type="Sprite2D" parent="camera/Camera2D/layer_bars/bar_vida/File00000000693861f9868Eca809Ffaddd11/File00000000693861f9868Eca809Ffaddd12/File00000000693861f9868Eca809Ffaddd15/File00000000693861f9868Eca809Ffaddd14"]
position = Vector2(2180, 0)
texture = ExtResource("7_c2ffx")
region_enabled = true
region_rect = Rect2(307.331, 0, 1099.74, 529)

[node name="File00000000693861f9868Eca809Ffaddd15" type="Sprite2D" parent="camera/Camera2D/layer_bars/bar_vida/File00000000693861f9868Eca809Ffaddd11/File00000000693861f9868Eca809Ffaddd12/File00000000693861f9868Eca809Ffaddd15/File00000000693861f9868Eca809Ffaddd14"]
position = Vector2(2700, 0)
texture = ExtResource("7_c2ffx")
region_enabled = true
region_rect = Rect2(307.331, 0, 1155.49, 529)

[node name="bar_stamina" type="ColorRect" parent="camera/Camera2D/layer_bars"]
offset_left = 14.0
offset_top = 186.0
offset_right = 1158.0
offset_bottom = 197.0

[node name="bar_vida2" type="ColorRect" parent="camera/Camera2D/layer_bars/bar_stamina"]
layout_mode = 0
offset_right = 1144.0
offset_bottom = 11.0
color = Color(0.59, 0.196667, 0, 1)

[node name="valor_bar" type="Sprite2D" parent="camera/Camera2D/layer_bars/bar_stamina"]
position = Vector2(47, -10)
scale = Vector2(0.1, 0.082875)
region_enabled = true
region_rect = Rect2(0, 0, 1536, 529)

[node name="Label" type="Label" parent="camera/Camera2D/layer_bars/bar_stamina/valor_bar"]
offset_left = -460.0
offset_top = 121.0
offset_right = 10970.0
offset_bottom = 265.0
theme_override_fonts/font = SubResource("FontVariation_hkn2p")
theme_override_font_sizes/font_size = 150
text = "999 "
horizontal_alignment = 1

[node name="File00000000693861f9868Eca809Ffaddd11" type="Sprite2D" parent="camera/Camera2D/layer_bars/bar_stamina"]
position = Vector2(43, -9)
scale = Vector2(0.1, 0.082875)
texture = ExtResource("7_c2ffx")
region_enabled = true
region_rect = Rect2(0, 0, 1410.26, 529)

[node name="File00000000693861f9868Eca809Ffaddd12" type="Sprite2D" parent="camera/Camera2D/layer_bars/bar_stamina/File00000000693861f9868Eca809Ffaddd11"]
position = Vector2(1160, 0)
texture = ExtResource("7_c2ffx")
region_enabled = true
region_rect = Rect2(307.331, 0, 1099.74, 529)

[node name="File00000000693861f9868Eca809Ffaddd13" type="Sprite2D" parent="camera/Camera2D/layer_bars/bar_stamina/File00000000693861f9868Eca809Ffaddd11/File00000000693861f9868Eca809Ffaddd12"]
position = Vector2(1090, 0)
texture = ExtResource("7_c2ffx")
region_enabled = true
region_rect = Rect2(307.331, 0, 1099.74, 529)

[node name="File00000000693861f9868Eca809Ffaddd14" type="Sprite2D" parent="camera/Camera2D/layer_bars/bar_stamina/File00000000693861f9868Eca809Ffaddd11/File00000000693861f9868Eca809Ffaddd12"]
position = Vector2(2140, 0)
texture = ExtResource("7_c2ffx")
region_enabled = true
region_rect = Rect2(307.331, 0, 1099.74, 529)

[node name="File00000000693861f9868Eca809Ffaddd13" type="Sprite2D" parent="camera/Camera2D/layer_bars/bar_stamina/File00000000693861f9868Eca809Ffaddd11/File00000000693861f9868Eca809Ffaddd12/File00000000693861f9868Eca809Ffaddd14"]
position = Vector2(1090, 0)
texture = ExtResource("7_c2ffx")
region_enabled = true
region_rect = Rect2(307.331, 0, 1099.74, 529)

[node name="File00000000693861f9868Eca809Ffaddd15" type="Sprite2D" parent="camera/Camera2D/layer_bars/bar_stamina/File00000000693861f9868Eca809Ffaddd11/File00000000693861f9868Eca809Ffaddd12"]
position = Vector2(4310, 0)
texture = ExtResource("7_c2ffx")
region_enabled = true
region_rect = Rect2(307.331, 0, 1099.74, 529)

[node name="File00000000693861f9868Eca809Ffaddd13" type="Sprite2D" parent="camera/Camera2D/layer_bars/bar_stamina/File00000000693861f9868Eca809Ffaddd11/File00000000693861f9868Eca809Ffaddd12/File00000000693861f9868Eca809Ffaddd15"]
position = Vector2(1090, 0)
texture = ExtResource("7_c2ffx")
region_enabled = true
region_rect = Rect2(307.331, 0, 1099.74, 529)

[node name="File00000000693861f9868Eca809Ffaddd14" type="Sprite2D" parent="camera/Camera2D/layer_bars/bar_stamina/File00000000693861f9868Eca809Ffaddd11/File00000000693861f9868Eca809Ffaddd12/File00000000693861f9868Eca809Ffaddd15"]
position = Vector2(2140, 0)
texture = ExtResource("7_c2ffx")
region_enabled = true
region_rect = Rect2(307.331, 0, 1099.74, 529)

[node name="File00000000693861f9868Eca809Ffaddd13" type="Sprite2D" parent="camera/Camera2D/layer_bars/bar_stamina/File00000000693861f9868Eca809Ffaddd11/File00000000693861f9868Eca809Ffaddd12/File00000000693861f9868Eca809Ffaddd15/File00000000693861f9868Eca809Ffaddd14"]
position = Vector2(1090, 0)
texture = ExtResource("7_c2ffx")
region_enabled = true
region_rect = Rect2(307.331, 0, 1099.74, 529)

[node name="File00000000693861f9868Eca809Ffaddd14" type="Sprite2D" parent="camera/Camera2D/layer_bars/bar_stamina/File00000000693861f9868Eca809Ffaddd11/File00000000693861f9868Eca809Ffaddd12/File00000000693861f9868Eca809Ffaddd15/File00000000693861f9868Eca809Ffaddd14"]
position = Vector2(2180, 0)
texture = ExtResource("7_c2ffx")
region_enabled = true
region_rect = Rect2(307.331, 0, 1099.74, 529)

[node name="File00000000693861f9868Eca809Ffaddd15" type="Sprite2D" parent="camera/Camera2D/layer_bars/bar_stamina/File00000000693861f9868Eca809Ffaddd11/File00000000693861f9868Eca809Ffaddd12/File00000000693861f9868Eca809Ffaddd15/File00000000693861f9868Eca809Ffaddd14"]
position = Vector2(2870, 0)
texture = ExtResource("7_c2ffx")
region_enabled = true
region_rect = Rect2(307.331, 0, 1155.49, 529)

[node name="bar_magia" type="ColorRect" parent="camera/Camera2D/layer_bars"]
offset_left = 14.0
offset_top = 199.0
offset_right = 1158.0
offset_bottom = 210.0

[node name="bar_vida2" type="ColorRect" parent="camera/Camera2D/layer_bars/bar_magia"]
layout_mode = 0
offset_right = 1144.0
offset_bottom = 11.0
color = Color(0.0228, 0.38, 0.374047, 1)

[node name="valor_bar" type="Sprite2D" parent="camera/Camera2D/layer_bars/bar_magia"]
position = Vector2(47, -10)
scale = Vector2(0.1, 0.082875)
region_enabled = true
region_rect = Rect2(0, 0, 1536, 529)

[node name="Label" type="Label" parent="camera/Camera2D/layer_bars/bar_magia/valor_bar"]
offset_left = -460.0
offset_top = 121.0
offset_right = 10970.0
offset_bottom = 265.0
theme_override_fonts/font = SubResource("FontVariation_hkn2p")
theme_override_font_sizes/font_size = 150
text = "999 "
horizontal_alignment = 1

[node name="File00000000693861f9868Eca809Ffaddd11" type="Sprite2D" parent="camera/Camera2D/layer_bars/bar_magia"]
position = Vector2(43, -9)
scale = Vector2(0.1, 0.082875)
texture = ExtResource("7_c2ffx")
region_enabled = true
region_rect = Rect2(0, 0, 1410.26, 529)

[node name="File00000000693861f9868Eca809Ffaddd12" type="Sprite2D" parent="camera/Camera2D/layer_bars/bar_magia/File00000000693861f9868Eca809Ffaddd11"]
position = Vector2(1160, 0)
texture = ExtResource("7_c2ffx")
region_enabled = true
region_rect = Rect2(307.331, 0, 1099.74, 529)

[node name="File00000000693861f9868Eca809Ffaddd13" type="Sprite2D" parent="camera/Camera2D/layer_bars/bar_magia/File00000000693861f9868Eca809Ffaddd11/File00000000693861f9868Eca809Ffaddd12"]
position = Vector2(1090, 0)
texture = ExtResource("7_c2ffx")
region_enabled = true
region_rect = Rect2(307.331, 0, 1099.74, 529)

[node name="File00000000693861f9868Eca809Ffaddd14" type="Sprite2D" parent="camera/Camera2D/layer_bars/bar_magia/File00000000693861f9868Eca809Ffaddd11/File00000000693861f9868Eca809Ffaddd12"]
position = Vector2(2140, 0)
texture = ExtResource("7_c2ffx")
region_enabled = true
region_rect = Rect2(307.331, 0, 1099.74, 529)

[node name="File00000000693861f9868Eca809Ffaddd13" type="Sprite2D" parent="camera/Camera2D/layer_bars/bar_magia/File00000000693861f9868Eca809Ffaddd11/File00000000693861f9868Eca809Ffaddd12/File00000000693861f9868Eca809Ffaddd14"]
position = Vector2(1090, 0)
texture = ExtResource("7_c2ffx")
region_enabled = true
region_rect = Rect2(307.331, 0, 1099.74, 529)

[node name="File00000000693861f9868Eca809Ffaddd15" type="Sprite2D" parent="camera/Camera2D/layer_bars/bar_magia/File00000000693861f9868Eca809Ffaddd11/File00000000693861f9868Eca809Ffaddd12"]
position = Vector2(4310, 0)
texture = ExtResource("7_c2ffx")
region_enabled = true
region_rect = Rect2(307.331, 0, 1099.74, 529)

[node name="File00000000693861f9868Eca809Ffaddd13" type="Sprite2D" parent="camera/Camera2D/layer_bars/bar_magia/File00000000693861f9868Eca809Ffaddd11/File00000000693861f9868Eca809Ffaddd12/File00000000693861f9868Eca809Ffaddd15"]
position = Vector2(1090, 0)
texture = ExtResource("7_c2ffx")
region_enabled = true
region_rect = Rect2(307.331, 0, 1099.74, 529)

[node name="File00000000693861f9868Eca809Ffaddd14" type="Sprite2D" parent="camera/Camera2D/layer_bars/bar_magia/File00000000693861f9868Eca809Ffaddd11/File00000000693861f9868Eca809Ffaddd12/File00000000693861f9868Eca809Ffaddd15"]
position = Vector2(2140, 0)
texture = ExtResource("7_c2ffx")
region_enabled = true
region_rect = Rect2(307.331, 0, 1099.74, 529)

[node name="File00000000693861f9868Eca809Ffaddd13" type="Sprite2D" parent="camera/Camera2D/layer_bars/bar_magia/File00000000693861f9868Eca809Ffaddd11/File00000000693861f9868Eca809Ffaddd12/File00000000693861f9868Eca809Ffaddd15/File00000000693861f9868Eca809Ffaddd14"]
position = Vector2(1090, 0)
texture = ExtResource("7_c2ffx")
region_enabled = true
region_rect = Rect2(307.331, 0, 1099.74, 529)

[node name="File00000000693861f9868Eca809Ffaddd14" type="Sprite2D" parent="camera/Camera2D/layer_bars/bar_magia/File00000000693861f9868Eca809Ffaddd11/File00000000693861f9868Eca809Ffaddd12/File00000000693861f9868Eca809Ffaddd15/File00000000693861f9868Eca809Ffaddd14"]
position = Vector2(2180, 0)
texture = ExtResource("7_c2ffx")
region_enabled = true
region_rect = Rect2(307.331, 0, 1099.74, 529)

[node name="File00000000693861f9868Eca809Ffaddd15" type="Sprite2D" parent="camera/Camera2D/layer_bars/bar_magia/File00000000693861f9868Eca809Ffaddd11/File00000000693861f9868Eca809Ffaddd12/File00000000693861f9868Eca809Ffaddd15/File00000000693861f9868Eca809Ffaddd14"]
position = Vector2(2870, 0)
texture = ExtResource("7_c2ffx")
region_enabled = true
region_rect = Rect2(307.331, 0, 1155.49, 529)

[node name="inventario" parent="camera" instance=ExtResource("8_1dex0")]

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Area2D"]
position = Vector2(1, 2)
shape = SubResource("CircleShape2D_cgb5g")

[node name="CiculoClique" type="Sprite2D" parent="."]
visible = false
position = Vector2(50, 50)
scale = Vector2(7, 7)
texture = ExtResource("14_c2ffx")

[node name="BrilhoClique" type="Sprite2D" parent="CiculoClique"]
position = Vector2(-7.14286, 2.38419e-07)
scale = Vector2(0.1, 0.1)
texture = ExtResource("15_1dex0")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../CiculoClique")
libraries = {
&"": SubResource("AnimationLibrary_jt8pl")
}
